--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.3.6",
+    "@reduxjs/toolkit": "^2.2.5",
     "framer-motion": "^11.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
