--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-VITE_API_URL = "https://hb6nrgce9k.execute-api.us-east-1.amazonaws.com/dev"
+VITE_API_URL = "https://htlt3o61xi.execute-api.us-east-1.amazonaws.com/dev"
